# ttb-server

./: .env.example  .gitignore  Cargo.toml  README.md  agregation_pipelines.md  docker-compose.yml  notes.md  rust-time-track-base.postman_collection.json
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: main.rs
mock-server/: Cargo.toml
server/: Cargo.toml
server/src/: error.rs  main.rs
server/src/controllers/: clients.rs  experiments.rs  mod.rs  projects.rs  seed.rs  tasks.rs
server/src/db/: clients_db_impl.rs  mod.rs  project_db_impl.rs  tasks_db_impl.rs
server/src/models/: client.rs  mod.rs  project.rs  task.rs
server/src/routes/: mod.rs  projects.rs  seed.rs  tasks.rs
server/tests/: health_check.rs  tasks.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/controllers/: authentication.rs  clients.rs  experiments.rs  mod.rs  projects.rs  seed.rs  tasks.rs
src/db/: accounts_db_impl.rs  clients_db_impl.rs  mod.rs  project_db_impl.rs  tasks_db_impl.rs
src/models/: account.rs  client.rs  task.rs  user.rs
src/routes/: authentication.rs  clients.rs  mod.rs  seed.rs  tasks.rs
src/types/: account.rs  mod.rs  project.rs  task.rs
src/utils/: pagination.rs
