[package]
name = "ttb-backend"
version = "0.1.0"
authors = ["Teo Oliver"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8.3" }
warp = "0.3.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }
mongodb = {version = "2.0.1", features = ["bson-chrono-0_4"]}
uuid = { version = "0.8", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
reqwest = "0.11.9"
dotenv = "0.15.0"
clap = { version = "3.1.7", features = ["derive"] }
proc-macro2 = "1.0.37"
rand = "0.8"
rust-argon2 = "1.0"
paseto = "2.0"
# integration-tests = { path = "integration-tests", version = " 0.1.0" }
mock-server = { path = "mock-server", version = " 0.1.0" }
handle-errors = { path = "handle-errors", version = "0.1.0" }

# Dev Dependencies
fake = { version = "2.4", features=['chrono']}
config = { version = "0.13.1", features = ["toml"] }


[workspace]
members = [".", "./handle-errors", "./integration-tests", './mock-server']
